[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Kołsut"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
async-trait = "0.1.77"
integrations = {path="../integrations"}
sdk = {path = "../sdk"}


